--- a/assets/style.css
+++ b/assets/style.css
@@ -1,27 +1,65 @@
     /* contoh tag selector */
+    *{
+        margin: 0;
+    }
     body{
         background-color: rgb(0, 0, 0);
     }
     nav{
         background-color: azure;
-
+        width: 100%;
+        position: fixed;
+        height: 40px;
+    }
+    nav ul{
+        list-style: none;
+    }
+    nav li{
+        float: left;
+        /* padding-top: 10px;
+        padding-right: 7px; */
+        padding: 8px 17px;   /* top bottom= 7px, right left=15px */
+    }
+    nav li:hover{
+        padding: 8px;
+        background-color: red;
     }
     /* contoh class selector */
     .header{
-        background-color: azure;
+        /* background-color: azure; */
+        background-image: url(image/gohan.jpg);
+        background-size: cover;
+        top: 50px;
+        height: 200px;
+        max-width: 100%;
+        padding: 80px 0px 0px 150px;
     }
     .judul1{
-        color: rgb(7, 7, 7);
+        color: rgb(255, 255, 255);
         font-size: 30px;
         font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
         text-shadow: 3px 4px yellow;
         border-left: 4px solid red;
         background-color: lightgrey;
+        margin: 5px;
     }
     .judul2{
-        color: rgb(5, 5, 5);
+        color: rgb(255, 255, 255);
         font-size: 50px; 
         /* ubah ukuran huruf */
         font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
         text-shadow: 3px 4px yellow;
+    }
+    .jobs{
+        margin: 10px 5px;
+        font-family: 'Times New Roman', Times, serif;
+        color: rgb(255, 255, 255);
+    }
+    .link-tombol-download{
+        background-color: aqua;
+        padding: 5px 4px;
+        margin: 2px;
+        color: black;
+        text-decoration: none;
+        border-radius: 10px;
     }
