--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     margin: 0;
 }
 body{
-    background-image: url(assets/image/gohan.jpg);
+    background-image: url(assets/image/simple-blue-gradient-background-vector.avif);
     background-size: cover;
 }
 nav{
@@ -38,11 +38,12 @@ a:hover{
 }
 hr{
     width: 95%;
-    margin: 5px 20px auto;
+    margin-top: 10px;
+    margin-right: 15px;
     border-bottom: 5px solid red;
 
 }
-.tanggal{
+.header i{
     color: aquamarine;
     background-color: rgba(0, 0, 0, 0.952);
     padding: 1px 4px;
@@ -50,13 +51,7 @@ hr{
     text-decoration: none;
     border-radius: 5px;
 }
-.Author{
-    color: aquamarine;
-    background-color: rgb(8, 8, 8);
-    padding: 1px 4px;
-    text-decoration: none;
-    border-radius: 5px;
-}
+
 
 .judul2{
     color: aliceblue;
@@ -71,24 +66,25 @@ hr{
     margin: 30px ;
     padding: 1px 10px;
 }
-.box1{
-    margin: 4px ;
-    padding: 5px 8px; 
-}   
+
 .frame{
-    margin: 70px 30px;
+    margin-right: 10px;
     border: 5px double blue;
+    float: left;
 }
-.box2{
-    margin: 75px auto;
-    color: rgb(255, 255, 255);
-    padding: 10px 8px;
-    font-family:'Times New Roman', Times, serif;
-    text-align: justify;
+.box1{
+    margin: 70px;
+    padding: 2px 3px;
     border: 6px ridge rgb(251, 255, 5);
-    font-size: 20px;
     background-color: rgb(0, 0, 0);
+}
+.box1 p{
+    color: white;
+    margin: 10px ;
+    font-size: 30px;
+    font-family: 'Times New Roman', Times, serif;
     font-style: oblique;
+    text-align: justify;
 }
 /* content------1 */
 
@@ -108,43 +104,30 @@ hr{
 
 .container2{
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: row;
     margin: 30px ;
-    padding: 1px 10px; 
-}
-.box3{
-    margin: 4px ;
-    padding: 5px 8px;
+    padding: 1px 10px;
 }
 .frame2{
-    margin: 40px 20px;
+    float: right;
     border: 5px double yellowgreen
+    
 }
-.box4{
-    margin: 50px ;
-    color: rgb(255, 255, 255);
-    padding: 10px 8px;
-    font-family:'Times New Roman', Times, serif;
-    text-align: justify;
+.box2{
+    margin: 70px;
+    padding: 2px 3px;
     border: 6px ridge rgb(251, 255, 5);
-    font-size: 20px;
     background-color: rgb(0, 0, 0);
+}
+.box2 p{
+    color: white;
+    margin: 10px ;
+    font-size: 30px;
+    font-family: 'Times New Roman', Times, serif;
     font-style: oblique;
 }
-p{
-    color: white;
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 20px;
-    margin: 5px;
-}
-ol{
-    color: rgb(255, 255, 255);
-    background-color: rgb(0, 0, 0);
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 20px;
-    text-align: justify;
-    margin: 10px;
-}
+
+
 /* content------2 */
 
 /* content------3 */
@@ -155,7 +138,7 @@ ol{
     padding: 40px 0px 0px 60px;
 }
 .judul4{
-    color: aliceblue;
+    color: rgb(0, 0, 0);
     padding-top: 40px ;
     padding-left: 20px;
     margin: 10px auto;
@@ -165,32 +148,31 @@ ol{
     display: flex;
     flex-direction: row;
     margin: 30px ;
-    padding: 40px 40px;
+    padding: 1px 10px;
 }
-.box5{
-    margin: 4px ;
-    padding: 5px 8px;
-}
+
 iframe{
     margin: 4px;
+    float: right;
+    margin: 8px;
 }
 .frame3{
     border: 5px double green;
-}
-.box6{
-    background-color: black;
-    font-family: 'Times New Roman', Times, serif;
-    font-style: italic;
-    font-size: 40px;
-    text-align: justify;
-    border: 6px ridge yellow;
-    margin: 10px;
-}
-
-.kiri1 p{
     float: left;
-    width: 400px;
-    
+    margin: 5px;
+}
+.box3{
+    margin: 35px;
+    padding: 2px 3px;
+    border: 6px ridge rgb(251, 255, 5);
+    background-color: rgb(0, 0, 0);
+}
+.box3 p{
+    color: white;
+    font-size: 30px;
+    font-family: 'Times New Roman', Times, serif;
+    font-style: oblique;
+    text-align: justify;
 }
 /* content------3 */
 
@@ -203,35 +185,36 @@ iframe{
 }
 
 .judul5{
-    color: white;
+    color: rgb(0, 0, 0);
     padding-top: 40px ;
     padding-left: 20px;
     margin: 10px auto;
 }
 .container4{
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: row;
     margin: 30px ;
     padding: 1px 10px; 
 }
-.box7{
-    margin: 4px ;
-    padding: 5px 8px;
-}
+
 .frame4{
-    margin: 40px 20px;
+    float: right;
     border: 5px double yellowgreen
+    
 }
-.box8{
-    margin: 50px ;
-    color: rgb(255, 255, 255);
-    padding: 10px 8px;
-    font-family:'Times New Roman', Times, serif;
-    text-align: justify;
+.box4{
+    margin: 35px;
+    padding: 15px 15px;
     border: 6px ridge rgb(251, 255, 5);
-    font-size: 20px;
     background-color: rgb(0, 0, 0);
+}
+.box4 p{
+    color: white;
+    font-size: 30px;
+    font-family: 'Times New Roman', Times, serif;
     font-style: oblique;
+    text-align: justify;
+    padding: 8px;
 }
 /* content------4 */
 
@@ -239,12 +222,13 @@ footer{
     max-width: 100%;
     height: 35px;
     padding: 5px;
-    background-color: rgb(0, 0, 0)
+    background-color: red
     
 }
 footer .kiri{
     float: left;
     color: aliceblue;
+    
 }
 footer .kanan{
     float: right;
@@ -255,6 +239,10 @@ footer .kanan{
     color: aliceblue;
     text-decoration: none;
 }
+
+
+
+/* MY PORTOFOLIO */
 .portofolio{
     top: 100px;
     max-width: 100%;
