--- a/assets/style.css
+++ b/assets/style.css
@@ -6,7 +6,7 @@
         background-color: rgb(0, 0, 0);
     }
     nav{
-        background-color: azure;
+        background-color: rgb(0, 247, 255);
         width: 100%;
         position: fixed;
         height: 40px;
@@ -21,9 +21,8 @@
         padding: 8px 17px;   /* top bottom= 7px, right left=15px */
     }
     /* pseudo class */
-    nav li:hover{
-        padding: 8px;
-        background-color: red;
+    a:hover{
+        color: rgb(255, 0, 255);
     }
     /* contoh class selector */
     .header{
