--- a/assets/style.css
+++ b/assets/style.css
@@ -132,3 +132,54 @@
         color: aliceblue;
         text-decoration: none;
     }
+
+    @media only screen and (max-width: 600px){
+        .header{
+            top: 80px;
+            height: 250px;
+            padding: 60px 0px 0px 10px;
+        }
+        .header h1{
+            font-size: 35px;
+        }
+        nav li{
+            float: left;
+            /* padding-top: 10px;
+            padding-right: 7px; */
+            padding: 8px 10px;   /* top bottom= 7px, right left=15px */
+            font-size: 10px;
+            margin-top: 5px;
+        }
+        .container{
+            border: 4px rgb(255, 0, 0) inset;
+            max-width: 100% ;
+            margin: 20px auto;
+            display: flex;
+            flex-direction: column;
+        }
+        .frame{
+            border: 2px inset greenyellow;
+            border-radius: 40px;
+            margin-left: 85px;
+        }
+        footer{
+            max-width: 100%;
+            height: 30px;
+            padding: 10px;
+            background-color: red
+        }
+        footer .kiri{
+            float: left;
+            color: aliceblue;
+        }
+        footer .kanan{
+            float: right;
+            color: aliceblue;
+        }
+        .kanan a{
+            padding-right: 0px;
+            color: aliceblue;
+            text-decoration: none;
+            font-size: 12px;
+        }
+    }
